# skills

./: .dockerignore  AGENTS.md  README.md  copilot-integration-investigation.md  install.sh  uninstall.sh
agent-cli/opencode/: README.md  sdd-orchestrator.md
agent-clis/copilot-cli/: tracking.md
cli/: .gitignore  Makefile  README.md  go.mod  pyproject.toml
cli/cmd/ai-harness/: main.go  run.go  run_test.go
cli/internal/commands/: commands.go  commands_test.go
cli/internal/install/: install.go  install_test.go
cli/internal/opencode/: opencode.go
cli/internal/sdd/: artifacts.go  basestatus.go  gates_test.go  render.go  render_test.go  sdd_test.go  statemachine.go  status.go  tasks.go  verifyreport.go  verifyreport_test.go  workspace.go
cli/src/ai_harness/: __init__.py  cli.py  compat.py  picker.py  rendering.py
cli/src/ai_harness/install/: __init__.py  config.py  generators.py  harness.py  install.py  manifest.py  ops.py  uninstall.py
cli/src/ai_harness/sdd/: __init__.py  artifacts.py  instructions.py  models.py  resolve.py  statemachine.py  tasks.py  verifyreport.py  workspace.py
cli/tests/: conftest.py  test_boundary.py  test_cli.py  test_install_cli.py  test_install_config.py  test_install_generators.py  test_install_harness.py  test_install_install.py  test_install_manifest.py  test_install_ops.py  test_json_compat.py  test_picker.py  test_rendering.py  test_resolver.py  test_tooling.py  test_verifyreport.py
e2e/: Dockerfile.ubuntu  README.md  docker-test.sh  e2e_test.sh  lib.sh
openspec/: config.yaml  testing-capabilities.md
(+98 files in other folders)
