[project]
name = "ai-harness"
version = "0.1.0"
description = "Spec-Driven Development helper CLI (Python migration slice: sdd-status)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
# Console script preserves the Go-compatible `ai-harness` invocation. Typer owns
# parsing/dispatch; main() is the stable entry point for the foundation slice.
ai-harness = "ai_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_harness"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["ai_harness"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
